--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildings.cshtml
@@ -12,8 +12,8 @@
                 <div class="min-content">
                     <h3>@item.Name</h3>
                     <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                    <p class="cost">Цена: от @item.Price грн/м<sup>2</sup></p>
-                    <a href="~/NewBuilding/Detail/@item.Id" id="follow">❯</a>
+                    <p class="cost">от @item.Price грн/м²</p>
+                    <a href="~/newbuilding/detail/@item.Id" id="follow">❯</a>
                 </div>
             </li>
         </div>
