--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -95,7 +95,8 @@
                 <div class="header">
 
                     <div class="logo">
-                        <a href="#" id=""><img src="~/Content/images/logo.png"></a>
+                        <a href="~/Home/Index" id=""><img src="~/Content/images/logo.png" width="300"></a>
+                        <p class="textlogo">Международная риэлторская инвестиционная компания</p>
                     </div>
 
                     <div class="search">
@@ -108,7 +109,7 @@
                             <div class="your_name">
                                 <div><p>Ваш логин:</p></div>
                                 <div class="your_login"><p><a href="#" class="" id="#">@session.User.Login</a></p></div>
-                                <div class="logout"><p>@Html.ActionLink("Выйти", "LogOut", "Authorize")</p></div>
+                                <div class="logout"><p>@Html.ActionLink("Выйти", "logout", "authorize")</p></div>
                             </div>
                         }
                     </div>
@@ -144,10 +145,10 @@
                             <li>
                                 <a href="#" id="">Продажа</a>
                                 <ol>
-                                    <li><a href="#">Купить квартиру</a></li>
-                                    <li><a href="#">Купить дом</a></li>
-                                    <li><a href="#">Купить участок</a></li>
-                                    <li><a href="#">Купить коммерческую</a></li>
+                                    <li>@Html.ActionLink("Купить квартиру", "flat", "sale")</li>
+                                    <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
+                                    <li>@Html.ActionLink("Купить участок", "homeStead", "sale")</li>
+                                    <li>@Html.ActionLink("Купить коммерческую", "commerce", "sale")</li>
                                 </ol>
                             </li>
                             <li>
@@ -158,7 +159,7 @@
                                     <li><a href="#">Снять участок</a></li>
                                 </ol>
                             </li>
-                            <li>@Html.ActionLink("Новостройки", "Index", "NewBuilding")</li>
+                            <li>@Html.ActionLink("Новостройки", "index", "newbuilding")</li>
                             <li><a href="#" id="">Менеджеры</a></li>
                             <li>
                                 <a href="#" id="">О нас</a>
@@ -189,7 +190,7 @@
                                 }
                                 else
                                 {
-                                    @Html.ActionLink("Выйти", "LogOut", "Authorize")
+                                    @Html.ActionLink("Выйти", "logout", "authorize")
                                 }
                             </li>
                         </ol>
@@ -221,10 +222,10 @@
                 <a href="#" onclick="" class="4" id="d"></a> <!-- ◯ -->
             </div>
             <ul class="listofimg">
-                <li><img src="~/Content/images/1.jpg" width="1500px" height="613px"></li>
-                <li><img src="~/Content/images/2.jpg" width="1500px" height="613px"></li>
-                <li><img src="~/Content/images/3.jpg" width="1500px" height="613px"></li>
-                <li><img src="~/Content/images/4.jpg" width="1500px" height="613px"></li>
+                <li><img src="~/Content/images/1.jpg" width="1500px" height="570px"></li>
+                <li><img src="~/Content/images/2.jpg" width="1500px" height="570px"></li>
+                <li><img src="~/Content/images/3.jpg" width="1500px" height="570px"></li>
+                <li><img src="~/Content/images/4.jpg" width="1500px" height="570px"></li>
             </ul>
         </div>
         @RenderBody()
